# citrix-perfmon-counters

./: CMakeLists.txt  CitrixProvider.cpp  CitrixProvider.h  ICASessionInstance.cpp  ICASessionInstance.h  README.md  Random.cpp  Random.h  citrix.xml  main.cpp
scripts/: generate_xml.ps1
src/: CitrixProvider.cpp  ICASessionInstance.cpp  Random.cpp  main.cpp  provider.cpp  random.cpp  session.cpp
